<resources>
    <string name="app_name">Folders</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_gallery">Gallery</string>

    <string name="open_album">Open Album</string>
    <string name="grant_permission">Grant Permission</string>

    <string name="permission_not_granted">App requires access to storage to access items stored in MediaStore.</string>

    <string name="delete_dialog_title">Delete?</string>
    <string name="delete_dialog_message">Delete %1$s?</string>
    <string name="delete_dialog_positive">Delete</string>
    <string name="delete_dialog_negative">Cancel</string>
    <string name="image">image</string>
    <string name="date_sample">30 april 2025</string>
    <string name="settings">Settings</string>
    <string name="share">share</string>
    <string name="trash">trash</string>
    <string name="favorite">favorite</string>
    <string name="folders_name">Folders Name</string>
    <string name="_100_files">100 files</string>

    <string name="go_parent_label">"⬆️ Parent folder"</string>
    <string name="folder_item">🗂 %1$s</string>
    <string name="file_item">📄 %1$s</string>
    <string name="permission_rationale_message">We need your permission to access your files\n and display them to you</string>
    <string name="permission_request_label">Give permission</string>
    <string name="legacy_external_storage_warning_message">You need to enable the <b>requestLegacyExternalStorage</b>\n flag in the AndroidManifest.xml file</string>
    <string name="settings_title">File Manager settings</string>
    <string name="file_manager_title">File Manager sample</string>
    <string name="sdk_codename_info">SDK codename: %1$s</string>
    <string name="sdk_version_info">SDK version: %1$s</string>
    <string name="legacy_storage_info">Legacy External Storage: %1$s</string>
    <string name="permission_used_info">Permission used: %1$s</string>
    <string name="permission_granted_info">Permission granted: %1$s</string>
    <string name="open_settings_button_label">Open settings</string>
    <string name="request_permission_button_label">Request permission</string>
    <string name="manager">Manager</string>
    <string name="menu">Menu</string>
    <string name="folders">Folders</string>

</resources>