<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/folders" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/menu" />

    <item
        android:id="@+id/navigation_gallery"
        android:icon="@drawable/ic_gallery_black_24"
        android:title="@string/title_gallery" />

    <item
        android:id="@+id/navigation_manager"
        android:icon="@drawable/ic_photo_album_black_24dp"
        android:title="@string/manager" />
</menu>